@@ -1,3 +1,6 @@
+26 November 2012: Wouter
+	- Fix to make nsd.udb portable between 32bit and 64bit machines.
+
 23 November 2012: Wouter
 	- Fix compiler warnings and fix blocking pipes.
 	- default tcp-count set to 100.
